<resources>
    <string name="app_name">soulgo</string>
    <string name="usericon">userIcon</string>
    <string name="leaderBoardButton">名人堂</string>
    <string name="scanButton">看我認狗</string>
    <string name="achievementButton">汪星問</string>
    <string name="pictureButton">寶典</string>
    <string name="function">學堂</string>
    <string name="news">汪汪日報社</string>
    <string name="newsTitle">黃金獵犬</string>
    <string name="newsDetail">位於 : 100台北市中正區八德路一段1號</string>
    <string name="userName">玩家</string>
    <string name="placeholder_hour_time">00:00</string>
    <string name="publish_1">
        \u00E4\u00B8\u008A\u00E5\u0082\u00B3\u00E5\u009C\u0096\u00E7\u0089\u0087
    </string>
    <string name="寶典">寶典</string>
    <string name="狗狗品種">狗狗品種</string>
    <string name="activity_name_classification">Identify Dog Breeds</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="from_gallery">From Gallery..</string>
    <string name="about_message"><![CDATA[
    <h1>Identify Dog Breeds</h1>
    <p>Identify over one hundred different dog breeds with your smartphone.</p>
    <p>Click the camera button or load an image from the image gallery to analyze a single picture. Tap the display to close the displayed result, or use the share button to share a screenshot.</p>
    <p>Activate continuous predictions and keep the dog in the circle to get predictions directly from the video stream. The application reports up to three predictions it believes to be the most correct. Please treat the output only as a suggestion.</p>
    <p>If you like this app consider buying the premium version which supports the identification of more than two hundred different dog breeds with much higher accuracy: https://play.google.com/store/apps/details?id=com.jstappdev.identify_dog_breeds_pro</p>
    <h2>Acknowledgements</h2>
    <p>Based on an extended version of the Stanford Dogs dataset. Icons made by Pause08, Smashicons, Becris, Freepik from www.flaticon.com.
    <p>Apache License 2.0. Source code available at github.com/j05t/dbclf. Pictures from Wikipedia.</p>
    ]]></string>
    <string name="about_menu">About</string>
    <string name="exit_menu">Exit</string>
    <string name="error_tf_init">Out of Memory Error. Try closing a few background applications.</string>
    <string name="share_with">Share with..</string>
    <string name="list_breeds">Supported Breeds</string>
    <string name="searchFor">Look up on Wikipedia?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="no_detection">他不是狗狗</string>
    <string name="change_language">Change Language</string>

    <string-array name="breeds_array">
        <item>猴㹴</item>
        <item>阿富汗獵狗</item>
        <item>非洲獵犬</item>
        <item>萬能㹴</item>
        <item>美國斯塔福郡梗</item>
        <item>阿彭策爾山犬</item>
        <item>澳洲梗犬</item>
        <item>貝生吉犬</item>
        <item>巴吉度獵犬</item>
        <item>小獵犬</item>
        <item>貝林登㹴</item>
        <item>伯恩山犬</item>
        <item>查理王小獵犬</item>
        <item>尋血獵犬</item>
        <item>布魯克浣熊獵犬</item>
        <item>邊境牧羊犬</item>
        <item>邊境㹴</item>
        <item>蘇俄牧羊犬</item>
        <item>法蘭德斯畜牧犬</item>
        <item>拳師犬</item>
        <item>布魯塞爾格林芬犬</item>
        <item>伯瑞犬</item>
        <item>布列塔尼獵犬</item>
        <item>鬥牛獒犬</item>
        <item>凱恩梗犬</item>
        <item>卡提根威爾斯柯基犬</item>
        <item>切薩皮克獵犬</item>
        <item>吉娃娃</item>
        <item>鬆獅犬</item>
        <item>克倫伯獵犬</item>
        <item>平毛尋回犬</item>
        <item>愛爾蘭軟毛㹴</item>
        <item>可卡獵犬</item>
        <item>長毛牧羊犬</item>
        <item>捲毛尋回犬</item>
        <item>丹迪丁蒙梗</item>
        <item>澳洲野犬</item>
        <item>杜賓犬</item>
        <item>英國獵狐犬</item>
        <item>英國塞特犬</item>
        <item>史賓格犬</item>
        <item>恩特布山犬</item>
        <item>美國愛斯基摩犬</item>
        <item>法國鬥牛犬</item>
        <item>德國牧羊犬</item>
        <item>巨型雪納瑞犬</item>
        <item>黃金獵犬</item>
        <item>戈登蹲獵犬</item>
        <item>大瑞士山地犬</item>
        <item>大丹犬</item>
        <item>大白熊犬</item>
        <item>格羅安達犬</item>
        <item>獵狐梗</item>
        <item>德國短毛指示犬</item>
        <item>愛爾蘭雪達犬</item>
        <item>愛爾蘭㹴</item>
        <item>愛爾蘭水獵犬</item>
        <item>愛爾蘭獵狼犬</item>
        <item>義大利靈緹犬</item>
        <item>日本狆</item>
        <item>凱斯犬</item>
        <item>澳洲卡爾比犬</item>
        <item>凱利藍㹴</item>
        <item>可蒙犬</item>
        <item>庫瓦茲犬</item>
        <item>拉布拉多犬</item>
        <item>湖畔梗</item>
        <item>蘭伯格犬</item>
        <item>拉薩犬</item>
        <item>臘腸犬</item>
        <item>阿拉斯加雪橇犬</item>
        <item>比利時牧羊犬</item>
        <item>墨西哥無毛犬</item>
        <item>迷你品犬</item>
        <item>迷你貴賓犬</item>
        <item>迷你雪納瑞犬</item>
        <item>紐芬蘭犬</item>
        <item>諾福克㹴</item>
        <item>挪威獵麋犬</item>
        <item>挪利其㹴</item>
        <item>英國古代牧羊犬</item>
        <item>獵水獺犬</item>
        <item>蝴蝶犬</item>
        <item>獅子狗</item>
        <item>潘布魯克威爾斯柯基犬</item>
        <item>博美犬</item>
        <item>巴哥犬</item>
        <item>紅骨獵浣熊犬</item>
        <item>羅得西亞背脊犬</item>
        <item>羅威那</item>
        <item>波士頓㹴</item>
        <item>豺</item>
        <item>伊比莎獵犬</item>
        <item>馬爾濟斯</item>
        <item>聖伯納犬</item>
        <item>薩路基獵犬</item>
        <item>薩摩耶犬</item>
        <item>史奇派克犬</item>
        <item>蘇格蘭㹴犬</item>
        <item>蘇格蘭獵鹿犬</item>
        <item>西里漢㹴</item>
        <item>喜樂蒂牧羊犬</item>
        <item>西伯利亞哈士奇</item>
        <item>澳洲絲毛㹴</item>
        <item>斯塔福郡鬥牛梗</item>
        <item>標準貴賓犬</item>
        <item>標準型雪納瑞</item>
        <item>薩塞克斯獵犬</item>
        <item>黑褐色獵浣熊犬</item>
        <item>藏獒</item>
        <item>西藏㹴</item>
        <item>玩具貴賓犬</item>
        <item>英國玩賞㹴</item>
        <item>西施犬</item>
        <item>維茲拉犬</item>
        <item>樹行者獵浣熊犬</item>
        <item>威瑪犬</item>
        <item>威爾斯激飛獵犬</item>
        <item>西高地白㹴</item>
        <item>惠比特犬</item>
        <item>约克夏梗</item>
    </string-array>

    <string-array name="array_languages" translatable="false">
        <item>English</item>
        <item>Deutsch</item>
        <item>Français </item>
        <item>ქართული</item>
    </string-array>

    <string-array name="array_language_codes" translateable="false">
        <item>en</item>
        <item>de</item>
        <item>fr </item>
        <item>ka</item>
    </string-array>
</resources>