<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1FAEE"
    android:paddingLeft="30dp"
    android:paddingTop="40dp"
    android:paddingRight="30dp"
    tools:context=".SecondActivity"
    tools:layout_editor_absoluteX="12dp"
    tools:layout_editor_absoluteY="2dp">

    <Button
        android:id="@+id/button10"
        android:layout_width="165dp"
        android:layout_height="230dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button"
        android:stateListAnimator="@null"
        android:text="Button"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/news" />

    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:stateListAnimator="@null"
        android:text="@string/userName"
        android:textColor="@color/text_color"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton"
        app:layout_constraintStart_toEndOf="@+id/imageButton"
        app:layout_constraintTop_toTopOf="@+id/imageButton" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginLeft="12dp"
        android:background="@drawable/news"
        android:contentDescription="@string/usericon"
        android:scaleType="center"
        android:src="@drawable/usericon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/usericon"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/function"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:stateListAnimator="@null"
        android:text="@string/function"
        android:textColor="@color/text_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton" />


    <Button
        android:id="@+id/leaderBoardButton"
        android:layout_width="165dp"
        android:layout_height="65dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button"
        android:stateListAnimator="@null"
        android:text="123"
        android:textColor="@color/white"
        app:backgroundTint="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/function" />

    <TextView
        android:id="@+id/leaderBoardButtonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/leaderBoardButton"
        android:textColor="@color/text_color"
        app:layout_constraintBottom_toBottomOf="@+id/leaderBoardButton"
        app:layout_constraintStart_toEndOf="@+id/leaderBoardImg"
        app:layout_constraintTop_toTopOf="@+id/leaderBoardButton" />

    <Button
        android:id="@+id/scanButton"
        android:layout_width="165dp"
        android:layout_height="65dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button"
        android:stateListAnimator="@null"
        android:text="123"
        android:textColor="@color/white"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/function" />


    <TextView
        android:id="@+id/scanButtonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/scanButton"
        android:textColor="@color/text_color"
        app:layout_constraintBottom_toBottomOf="@+id/scanButton"
        app:layout_constraintStart_toEndOf="@+id/scanIcon"
        app:layout_constraintTop_toTopOf="@+id/scanButton" />


    <Button
        android:id="@+id/achievementButton"
        android:layout_width="165dp"
        android:layout_height="65dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button"
        android:stateListAnimator="@null"
        android:text="123"
        android:textColor="@color/white"
        app:backgroundTint="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/leaderBoardButton" />

    <TextView
        android:id="@+id/achievementButtonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/achievementButton"
        android:textColor="@color/text_color"
        app:layout_constraintBottom_toBottomOf="@+id/achievementButton"
        app:layout_constraintStart_toEndOf="@+id/achievementIcon"
        app:layout_constraintTop_toTopOf="@+id/achievementButton" />

    <Button
        android:id="@+id/pictureButton"
        android:layout_width="165dp"
        android:layout_height="65dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button"
        android:stateListAnimator="@null"
        android:text="123"
        android:textColor="@color/white"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scanButton" />

    <TextView
        android:id="@+id/pictureButtonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/pictureButton"
        android:textColor="@color/text_color"
        app:layout_constraintBottom_toBottomOf="@+id/pictureButton"
        app:layout_constraintStart_toEndOf="@+id/pictureIcon"
        app:layout_constraintTop_toTopOf="@+id/pictureButton" />

    <ImageView
        android:id="@+id/leaderBoardImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/leaderBoardButton"
        app:layout_constraintStart_toStartOf="@+id/leaderBoardButton"
        app:layout_constraintTop_toTopOf="@+id/leaderBoardButton"
        app:srcCompat="@drawable/icon1"
        tools:srcCompat="@drawable/icon1" />


    <ImageView
        android:id="@+id/scanIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/scanButton"
        app:layout_constraintStart_toStartOf="@+id/scanButton"
        app:layout_constraintTop_toTopOf="@+id/scanButton"
        app:srcCompat="@drawable/icon2"
        tools:srcCompat="@drawable/icon2" />

    <ImageView
        android:id="@+id/achievementIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/achievementButton"
        app:layout_constraintStart_toStartOf="@+id/achievementButton"
        app:layout_constraintTop_toTopOf="@+id/achievementButton"
        app:srcCompat="@drawable/icon3" />

    <ImageView
        android:id="@+id/pictureIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/pictureButton"
        app:layout_constraintStart_toStartOf="@+id/pictureButton"
        app:layout_constraintTop_toTopOf="@+id/pictureButton"
        app:srcCompat="@drawable/icon4" />

    <TextView
        android:id="@+id/news"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/news"
        android:textColor="@color/text_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/achievementButton" />

    <ImageView
        android:id="@+id/userLevel"
        android:layout_width="117dp"
        android:layout_height="47dp"
        android:layout_marginTop="-30dp"
        app:layout_constraintEnd_toEndOf="@+id/imageButton"
        app:layout_constraintStart_toStartOf="@+id/imageButton"
        app:layout_constraintTop_toBottomOf="@+id/imageButton"
        app:srcCompat="@drawable/bone"
        tools:srcCompat="@drawable/bone" />

    <ImageView
        android:id="@+id/settingIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageButton"
        app:srcCompat="@drawable/setting"
        tools:srcCompat="@drawable/setting" />

    <Button
        android:id="@+id/button9"
        android:layout_width="165dp"
        android:layout_height="230dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button"
        android:stateListAnimator="@null"
        android:text="Button"
        app:backgroundTint="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/news" />

    <ImageButton
        android:id="@+id/postButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/button"
        android:text="Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/post"
        tools:srcCompat="@drawable/post" />

    <TextView
        android:id="@+id/newsTitle"
        android:layout_width="165dp"
        android:layout_height="0dp"
        android:layout_marginTop="140dp"
        android:paddingLeft="15dp"
        android:text="@string/newsTitle"
        app:layout_constraintStart_toStartOf="@+id/button9"
        app:layout_constraintTop_toTopOf="@+id/button9" />

    <TextView
        android:id="@+id/newsDetail"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:paddingTop="15dp"
        android:paddingRight="15dp"
        android:text="@string/newsDetail"
        app:layout_constraintStart_toStartOf="@+id/button9"
        app:layout_constraintTop_toBottomOf="@+id/newsTitle" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:paddingLeft="15dp"
        android:text="@string/newsTitle"
        app:layout_constraintStart_toStartOf="@+id/button10"
        app:layout_constraintTop_toTopOf="@+id/button10" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:paddingTop="15dp"
        android:paddingRight="15dp"
        android:text="@string/newsDetail"
        app:layout_constraintStart_toStartOf="@+id/button10"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#F1FAEE"
        app:layout_constraintBottom_toBottomOf="@+id/news"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/news"
        app:srcCompat="@drawable/arrow" />

</androidx.constraintlayout.widget.ConstraintLayout>